metadata/objects/graxaccountindex__x.object
<CustomObject>
    <fields>
        <fullName>Grax_Restore_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grax_Restore__c</description>
        <externalDeveloperName>Grax_Restore__c</externalDeveloperName>
        <label>Grax_Restore__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Formula_Field_c__c</fullName>
        <description>Initial_Formula_Field__c</description>
        <externalDeveloperName>Initial_Formula_Field__c</externalDeveloperName>
        <label>Initial_Formula_Field__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsCustomerPortal</description>
        <externalDeveloperName>IsCustomerPortal</externalDeveloperName>
        <label>IsCustomerPortal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExcludedFromRealign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsExcludedFromRealign</description>
        <externalDeveloperName>IsExcludedFromRealign</externalDeveloperName>
        <label>IsExcludedFromRealign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPartner</description>
        <externalDeveloperName>IsPartner</externalDeveloperName>
        <label>IsPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPersonAccount</description>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>IsPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <description>JigsawCompanyId</description>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>JigsawCompanyId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <description>Jigsaw</description>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Jigsaw</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Klout_Score_pc__c</fullName>
        <description>Klout_Score__pc</description>
        <externalDeveloperName>Klout_Score__pc</externalDeveloperName>
        <label>Klout_Score__pc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>LastActivityDate</description>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>LastActivityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Name__c</fullName>
        <description>LastModifiedBy_Name</description>
        <externalDeveloperName>LastModifiedBy_Name</externalDeveloperName>
        <label>LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <description>LastReferencedDate</description>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>LastReferencedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <description>LastViewedDate</description>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Year_Revenue_Generated_c__c</fullName>
        <description>Last_Year_Revenue_Generated__c</description>
        <externalDeveloperName>Last_Year_Revenue_Generated__c</externalDeveloperName>
        <label>Last_Year_Revenue_Generated__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestBooleanField_c__c</fullName>
        <description>LatestBooleanField__c</description>
        <externalDeveloperName>LatestBooleanField__c</externalDeveloperName>
        <label>LatestBooleanField__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestNumberField_c__c</fullName>
        <description>LatestNumberField__c</description>
        <externalDeveloperName>LatestNumberField__c</externalDeveloperName>
        <label>LatestNumberField__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestTextField_c__c</fullName>
        <description>LatestTextField__c</description>
        <externalDeveloperName>LatestTextField__c</externalDeveloperName>
        <label>LatestTextField__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude_c__c</fullName>
        <description>Latitude__c</description>
        <externalDeveloperName>Latitude__c</externalDeveloperName>
        <label>Latitude__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate_c__c</fullName>
        <description>Lead_Conversion_Rate__c</description>
        <externalDeveloperName>Lead_Conversion_Rate__c</externalDeveloperName>
        <label>Lead_Conversion_Rate__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_To_Opportunity_Close_Rate_c__c</fullName>
        <description>Lead_To_Opportunity_Close_Rate__c</description>
        <externalDeveloperName>Lead_To_Opportunity_Close_Rate__c</externalDeveloperName>
        <label>Lead_To_Opportunity_Close_Rate__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liabilities_c__c</fullName>
        <description>Liabilities__c</description>
        <externalDeveloperName>Liabilities__c</externalDeveloperName>
        <label>Liabilities__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LongID_c__c</fullName>
        <description>LongID__c</description>
        <externalDeveloperName>LongID__c</externalDeveloperName>
        <label>LongID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Salesforce_ID_c__c</fullName>
        <description>Long_Salesforce_ID__c</description>
        <externalDeveloperName>Long_Salesforce_ID__c</externalDeveloperName>
        <label>Long_Salesforce_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Test_c__c</fullName>
        <description>Long_Test__c</description>
        <externalDeveloperName>Long_Test__c</externalDeveloperName>
        <label>Long_Test__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Text_c__c</fullName>
        <description>Long_Text__c</description>
        <externalDeveloperName>Long_Text__c</externalDeveloperName>
        <label>Long_Text__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_c__c</fullName>
        <description>Longitude__c</description>
        <externalDeveloperName>Longitude__c</externalDeveloperName>
        <label>Longitude__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEmail_c__c</fullName>
        <description>MEmail__c</description>
        <externalDeveloperName>MEmail__c</externalDeveloperName>
        <label>MEmail__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPercent_c__c</fullName>
        <description>MPercent__c</description>
        <externalDeveloperName>MPercent__c</externalDeveloperName>
        <label>MPercent__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPicklistMultiselect_c__c</fullName>
        <description>MPicklistMultiselect__c</description>
        <externalDeveloperName>MPicklistMultiselect__c</externalDeveloperName>
        <label>MPicklistMultiselect__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Sign_Date_c__c</fullName>
        <description>MSA_Sign_Date__c</description>
        <externalDeveloperName>MSA_Sign_Date__c</externalDeveloperName>
        <label>MSA_Sign_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUrl_c__c</fullName>
        <description>MUrl__c</description>
        <externalDeveloperName>MUrl__c</externalDeveloperName>
        <label>MUrl__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYFIELD_c__c</fullName>
        <description>MYFIELD__c</description>
        <externalDeveloperName>MYFIELD__c</externalDeveloperName>
        <label>MYFIELD__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_the_Account_c__c</fullName>
        <description>Map_the_Account__c</description>
        <externalDeveloperName>Map_the_Account__c</externalDeveloperName>
        <label>Map_the_Account__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <description>MasterRecordId</description>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>MasterRecordId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mdate_c__c</fullName>
        <description>Mdate__c</description>
        <externalDeveloperName>Mdate__c</externalDeveloperName>
        <label>Mdate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MformulaCurrency_c__c</fullName>
        <description>MformulaCurrency__c</description>
        <externalDeveloperName>MformulaCurrency__c</externalDeveloperName>
        <label>MformulaCurrency__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mformuladate_c__c</fullName>
        <description>Mformuladate__c</description>
        <externalDeveloperName>Mformuladate__c</externalDeveloperName>
        <label>Mformuladate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mformulanumber_c__c</fullName>
        <description>Mformulanumber__c</description>
        <externalDeveloperName>Mformulanumber__c</externalDeveloperName>
        <label>Mformulanumber__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_of_Birth_pc__c</fullName>
        <description>Month_of_Birth__pc</description>
        <externalDeveloperName>Month_of_Birth__pc</externalDeveloperName>
        <label>Month_of_Birth__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtext_c__c</fullName>
        <description>Mtext__c</description>
        <externalDeveloperName>Mtext__c</externalDeveloperName>
        <label>Mtext__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtextarea_c__c</fullName>
        <description>Mtextarea__c</description>
        <externalDeveloperName>Mtextarea__c</externalDeveloperName>
        <label>Mtextarea__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtextarealong_c__c</fullName>
        <description>Mtextarealong__c</description>
        <externalDeveloperName>Mtextarealong__c</externalDeveloperName>
        <label>Mtextarealong__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtextarearich_c__c</fullName>
        <description>Mtextarearich__c</description>
        <externalDeveloperName>Mtextarearich__c</externalDeveloperName>
        <label>Mtextarearich__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtextencrypted_c__c</fullName>
        <description>Mtextencrypted__c</description>
        <externalDeveloperName>Mtextencrypted__c</externalDeveloperName>
        <label>Mtextencrypted__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mtime_c__c</fullName>
        <description>Mtime__c</description>
        <externalDeveloperName>Mtime__c</externalDeveloperName>
        <label>Mtime__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyAutoNumber_c__c</fullName>
        <description>MyAutoNumber__c</description>
        <externalDeveloperName>MyAutoNumber__c</externalDeveloperName>
        <label>MyAutoNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyDateField_c__c</fullName>
        <description>MyDateField__c</description>
        <externalDeveloperName>MyDateField__c</externalDeveloperName>
        <label>MyDateField__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyNumberField_c__c</fullName>
        <description>MyNumberField__c</description>
        <externalDeveloperName>MyNumberField__c</externalDeveloperName>
        <label>MyNumberField__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Sign_Date_c__c</fullName>
        <description>NDA_Sign_Date__c</description>
        <externalDeveloperName>NDA_Sign_Date__c</externalDeveloperName>
        <label>NDA_Sign_Date__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsCode__c</fullName>
        <description>NaicsCode</description>
        <externalDeveloperName>NaicsCode</externalDeveloperName>
        <label>NaicsCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsDesc__c</fullName>
        <description>NaicsDesc</description>
        <externalDeveloperName>NaicsDesc</externalDeveloperName>
        <label>NaicsDesc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Worth_c__c</fullName>
        <description>Net_Worth__c</description>
        <externalDeveloperName>Net_Worth__c</externalDeveloperName>
        <label>Net_Worth__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewTestNumber_c__c</fullName>
        <description>NewTestNumber__c</description>
        <externalDeveloperName>NewTestNumber__c</externalDeveloperName>
        <label>NewTestNumber__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_pc__c</fullName>
        <description>Notes__pc</description>
        <externalDeveloperName>Notes__pc</externalDeveloperName>
        <label>Notes__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees_GRAX_long__c</fullName>
        <description>NumberOfEmployees_GRAX_long</description>
        <externalDeveloperName>NumberOfEmployees_GRAX_long</externalDeveloperName>
        <label>NumberOfEmployees_GRAX_long</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <description>NumberOfEmployees</description>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>NumberOfEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities_c__c</fullName>
        <description>Number_Closed_Lost_Opportunities__c</description>
        <externalDeveloperName>Number_Closed_Lost_Opportunities__c</externalDeveloperName>
        <label>Number_Closed_Lost_Opportunities__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities_c__c</fullName>
        <description>Number_Closed_Opportunities__c</description>
        <externalDeveloperName>Number_Closed_Opportunities__c</externalDeveloperName>
        <label>Number_Closed_Opportunities__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities_c__c</fullName>
        <description>Number_Closed_Won_Opportunities__c</description>
        <externalDeveloperName>Number_Closed_Won_Opportunities__c</externalDeveloperName>
        <label>Number_Closed_Won_Opportunities__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active_c__c</fullName>
        <description>Number_Leads_Active__c</description>
        <externalDeveloperName>Number_Leads_Active__c</externalDeveloperName>
        <label>Number_Leads_Active__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted_c__c</fullName>
        <description>Number_Leads_Converted__c</description>
        <externalDeveloperName>Number_Leads_Converted__c</externalDeveloperName>
        <label>Number_Leads_Converted__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total_c__c</fullName>
        <description>Number_Leads_Total__c</description>
        <externalDeveloperName>Number_Leads_Total__c</externalDeveloperName>
        <label>Number_Leads_Total__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opportunities_c__c</fullName>
        <description>Number_Open_Opportunities__c</description>
        <externalDeveloperName>Number_Open_Opportunities__c</externalDeveloperName>
        <label>Number_Open_Opportunities__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Location_Data_c__c</fullName>
        <description>Number_of_Employees_Location_Data__c</description>
        <externalDeveloperName>Number_of_Employees_Location_Data__c</externalDeveloperName>
        <label>Number_of_Employees_Location_Data__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Friends_pc__c</fullName>
        <description>Number_of_Friends__pc</description>
        <externalDeveloperName>Number_of_Friends__pc</externalDeveloperName>
        <label>Number_of_Friends__pc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations_c__c</fullName>
        <description>NumberofLocations__c</description>
        <externalDeveloperName>NumberofLocations__c</externalDeveloperName>
        <label>NumberofLocations__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Address_in_Google_Maps_pc__c</fullName>
        <description>Open_Address_in_Google_Maps__pc</description>
        <externalDeveloperName>Open_Address_in_Google_Maps__pc</externalDeveloperName>
        <label>Open_Address_in_Google_Maps__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Oppty_Value_c__c</fullName>
        <description>Open_Oppty_Value__c</description>
        <externalDeveloperName>Open_Oppty_Value__c</externalDeveloperName>
        <label>Open_Oppty_Value__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opptys_c__c</fullName>
        <description>Open_Opptys__c</description>
        <externalDeveloperName>Open_Opptys__c</externalDeveloperName>
        <label>Open_Opptys__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_vs_Closed_Opportunities_c__c</fullName>
        <description>Open_vs_Closed_Opportunities__c</description>
        <externalDeveloperName>Open_vs_Closed_Opportunities__c</externalDeveloperName>
        <label>Open_vs_Closed_Opportunities__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_vs_Closed_Won_Opportunities_c__c</fullName>
        <description>Open_vs_Closed_Won_Opportunities__c</description>
        <externalDeveloperName>Open_vs_Closed_Won_Opportunities__c</externalDeveloperName>
        <label>Open_vs_Closed_Won_Opportunities__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingHoursId__c</fullName>
        <description>OperatingHoursId</description>
        <externalDeveloperName>OperatingHoursId</externalDeveloperName>
        <label>OperatingHoursId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours_c__c</fullName>
        <description>Operating_Hours__c</description>
        <externalDeveloperName>Operating_Hours__c</externalDeveloperName>
        <label>Operating_Hours__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours_c_grax_xf_operatinghours__c</fullName>
        <description>Operating_Hours__c_grax_xf_operatinghours</description>
        <externalDeveloperName>Operating_Hours__c_grax_xf_operatinghours</externalDeveloperName>
        <label>Operating_Hours__c_grax_xf_operatinghour</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours_r_Name__c</fullName>
        <description>Operating_Hours__r_Name</description>
        <externalDeveloperName>Operating_Hours__r_Name</externalDeveloperName>
        <label>Operating_Hours__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_GRAX_Revenue_c__c</fullName>
        <description>Opportunity_GRAX_Revenue__c</description>
        <externalDeveloperName>Opportunity_GRAX_Revenue__c</externalDeveloperName>
        <label>Opportunity_GRAX_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate_c__c</fullName>
        <description>Opportunity_Win_Rate__c</description>
        <externalDeveloperName>Opportunity_Win_Rate__c</externalDeveloperName>
        <label>Opportunity_Win_Rate__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Income_c__c</fullName>
        <description>Other_Income__c</description>
        <externalDeveloperName>Other_Income__c</externalDeveloperName>
        <label>Other_Income__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoice_Revenue_c__c</fullName>
        <description>Overdue_Invoice_Revenue__c</description>
        <externalDeveloperName>Overdue_Invoice_Revenue__c</externalDeveloperName>
        <label>Overdue_Invoice_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoices_c__c</fullName>
        <description>Overdue_Invoices__c</description>
        <externalDeveloperName>Overdue_Invoices__c</externalDeveloperName>
        <label>Overdue_Invoices__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerAlias__c</fullName>
        <description>OwnerAlias</description>
        <externalDeveloperName>OwnerAlias</externalDeveloperName>
        <label>OwnerAlias</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_user__c</fullName>
        <description>OwnerId_grax_xf_user</description>
        <externalDeveloperName>OwnerId_grax_xf_user</externalDeveloperName>
        <label>OwnerId_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Owner_Name</description>
        <externalDeveloperName>Owner_Name</externalDeveloperName>
        <label>Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>Ownership</description>
        <externalDeveloperName>Ownership</externalDeveloperName>
        <label>Ownership</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAText2_c__c</fullName>
        <description>PAText2__c</description>
        <externalDeveloperName>PAText2__c</externalDeveloperName>
        <label>PAText2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>ParentId</description>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId_grax_xf_account__c</fullName>
        <description>ParentId_grax_xf_account</description>
        <externalDeveloperName>ParentId_grax_xf_account</externalDeveloperName>
        <label>ParentId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <description>Parent_Name</description>
        <externalDeveloperName>Parent_Name</externalDeveloperName>
        <label>Parent_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Certification_c__c</fullName>
        <description>Partner_Certification__c</description>
        <externalDeveloperName>Partner_Certification__c</externalDeveloperName>
        <label>Partner_Certification__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Geographic_Coverage_c__c</fullName>
        <description>Partner_Geographic_Coverage__c</description>
        <externalDeveloperName>Partner_Geographic_Coverage__c</externalDeveloperName>
        <label>Partner_Geographic_Coverage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Level_c__c</fullName>
        <description>Partner_Program_Level__c</description>
        <externalDeveloperName>Partner_Program_Level__c</externalDeveloperName>
        <label>Partner_Program_Level__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type_c__c</fullName>
        <description>Partner_Type__c</description>
        <externalDeveloperName>Partner_Type__c</externalDeveloperName>
        <label>Partner_Type__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Status_c__c</fullName>
        <description>Partnership_Status__c</description>
        <externalDeveloperName>Partnership_Status__c</externalDeveloperName>
        <label>Partnership_Status__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Won_c__c</fullName>
        <description>Percent_Won__c</description>
        <externalDeveloperName>Percent_Won__c</externalDeveloperName>
        <label>Percent_Won__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonAssistantName__c</fullName>
        <description>PersonAssistantName</description>
        <externalDeveloperName>PersonAssistantName</externalDeveloperName>
        <label>PersonAssistantName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAssistantPhone__c</fullName>
        <description>PersonAssistantPhone</description>
        <externalDeveloperName>PersonAssistantPhone</externalDeveloperName>
        <label>PersonAssistantPhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonBirthdate__c</fullName>
        <description>PersonBirthdate</description>
        <externalDeveloperName>PersonBirthdate</externalDeveloperName>
        <label>PersonBirthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonContactId__c</fullName>
        <description>PersonContactId</description>
        <externalDeveloperName>PersonContactId</externalDeveloperName>
        <label>PersonContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonContactId_grax_xf_contact__c</fullName>
        <description>PersonContactId_grax_xf_contact</description>
        <externalDeveloperName>PersonContactId_grax_xf_contact</externalDeveloperName>
        <label>PersonContactId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonContact_Name__c</fullName>
        <description>PersonContact_Name</description>
        <externalDeveloperName>PersonContact_Name</externalDeveloperName>
        <label>PersonContact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonDepartment__c</fullName>
        <description>PersonDepartment</description>
        <externalDeveloperName>PersonDepartment</externalDeveloperName>
        <label>PersonDepartment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonDoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PersonDoNotCall</description>
        <externalDeveloperName>PersonDoNotCall</externalDeveloperName>
        <label>PersonDoNotCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedDate__c</fullName>
        <description>PersonEmailBouncedDate</description>
        <externalDeveloperName>PersonEmailBouncedDate</externalDeveloperName>
        <label>PersonEmailBouncedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedReason__c</fullName>
        <description>PersonEmailBouncedReason</description>
        <externalDeveloperName>PersonEmailBouncedReason</externalDeveloperName>
        <label>PersonEmailBouncedReason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>